# python-notes

./: .gitignore  pyproject.toml  python_notes_wiki_cli.md
src/python_notes/: cli.py  main.py  output.py
src/python_notes/cli/: config.py  note.py
src/python_notes/config/: config.py
src/python_notes/editor/: __init__.py  launcher.py
src/python_notes/note/: note.py
src/python_notes/output/: __init__.py  formatters.py
src/python_notes/storage/: __init__.py  repository.py
tests/: test_config.py  test_editor.py  test_note.py  test_output.py  test_storage.py
