[project]
name = "python-notes"
version = "0.1.0"
description = "Python cli note taking app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"typer",
	"pyyaml",
]

[project.scripts]
python-notes = "python_notes.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build_backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8"
]
